Thu Nov 15 20:37:24 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.cpp:
          Work around for bug 2980. Create the MC ORB in the parent thread
          and pass to the ORBTask.
          Setup a barrier to synch the parent and child threads. This
          holds the parent thread till child initialization is completed.

Wed Nov 14 18:52:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/lib/Client_Request_Interceptor.cpp:
          Don't try to catch NoContext, TC is broken at this moment after the change
          of Mon Nov 12 08:54:21 UTC 2007. Will work on a revised change
          which also should make the change to this test not needed. The
          test will then fail on the scoreboard until the change is in
          the repo.

Wed Nov 14 12:42:08 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Fixed 2 memory leaks that was happening because the value
          returned by activate_server_i(...) was ignored.

Tue Nov 13 22:27:17 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tao/TransportCurrent/IIOP_Current_Impl.h:
        * tao/TransportCurrent/IIOP_Current_Impl.cpp:

        Updated comments to reflect the implementation changes in:
        Mon Nov 12 08:54:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

Mon Nov 12 17:54:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/LongUpcalls/run_test.pl:
        * tests/Multiple/run_test.pl:
          Improved for VxWorks

Mon Nov 12 17:44:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CodeSets/simple/run_test.pl:
          Added support for VxWorks cross platform testing

        * tests/RTCORBA/MT_Client_Protocol_Priority/run_test.pl:
          Simplified this script
